methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: type mismatch;
 found   : java.awt.Color
 required: String
      c = getCouleurSol()
                       ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(!estFaceMur()){
    ^