methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if(!estFaceMur()){
      var c = "0"
      avance()
      c = getCouleurSol()
      if(c == Color.green){
      	recule()
        return true
      }
      else{
        recule()
        return false
      }
    }
}